--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,5 +41,6 @@ dependencies {
     compile 'com.squareup.okhttp3:logging-interceptor:3.0.1'
     compile 'io.reactivex:rxandroid:1.1.0'
     compile 'com.github.bumptech.glide:glide:3.7.0'
-    compile 'jp.wasabeef:blurry:2.0.3'
+    compile 'org.lucasr.twowayview:core:1.0.0-SNAPSHOT@aar'
+    compile 'org.lucasr.twowayview:layouts:1.0.0-SNAPSHOT@aar'
 }
