--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,6 +19,7 @@
             </intent-filter>
         </activity>
         <activity android:name=".ui.activity.PostsActivity" />
+        <activity android:name=".ui.activity.CommentsActivity"/>
     </application>
 
 </manifest>
